--- a/src/racket/src/Makefile.in
+++ b/src/racket/src/Makefile.in
@@ -330,13 +330,13 @@ error.@LTO@: $(COMMON_HEADERS) \
         $(srcdir)/../src/stypes.h  
 eval.@LTO@: $(COMMON_HEADERS) \
         $(srcdir)/../src/stypes.h $(srcdir)/mzmark_eval.inc \
-          $(srcdir)/schmach.h $(srcdir)/mzstkchk.h $(srcdir)/schrunst.h \
-				$(srcdir)/future.h
+        $(srcdir)/schmach.h $(srcdir)/mzstkchk.h $(srcdir)/schrunst.h \
+        $(srcdir)/future.h
 file.@LTO@: $(COMMON_HEADERS) \
         $(srcdir)/../src/stypes.h
 fun.@LTO@: $(COMMON_HEADERS) \
         $(srcdir)/../src/stypes.h $(srcdir)/mzmark_fun.inc $(srcdir)/schmap.inc \
-				$(srcdir)/future.h
+        $(srcdir)/future.h $(srcdir)/schchap.h
 future.@LTO@: $(COMMON_HEADERS) $(srcdir)/future.h $(SCONFIG) \
         $(srcdir)/../src/stypes.h $(srcdir)/mzmark_future.inc \
         $(srcdir)/jit_ts_future_glue.c $(srcdir)/jit_ts_runtime_glue.c $(srcdir)/jit_ts_protos.h
@@ -346,7 +346,7 @@ jit.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS)  $(srcdir)/mzmark_jit.inc
 jitalloc.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS)
 jitarith.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS)
 jitcall.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS)
-jitcommon.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS)
+jitcommon.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS) $(srcdir)/schchap.h
 jitinline.@LTO@: $(COMMON_HEADERS) $(JIT_HEADERS)
 jitprep.@LTO@: $(COMMON_HEADERS) \
         $(srcdir)/../src/stypes.h
@@ -398,7 +398,7 @@ string.@LTO@: $(COMMON_HEADERS) \
          $(srcdir)/../src/stypes.h    $(srcdir)/schvers.h $(srcdir)/mzmark_string.inc $(srcdir)/strops.inc \
          $(srcdir)/schustr.inc
 struct.@LTO@: $(COMMON_HEADERS) \
-         $(srcdir)/../src/stypes.h $(srcdir)/mzmark_struct.inc
+         $(srcdir)/../src/stypes.h $(srcdir)/mzmark_struct.inc $(srcdir)/schchap.h
 syntax.@LTO@: $(COMMON_HEADERS) \
          $(srcdir)/../src/stypes.h $(srcdir)/schfd.h $(srcdir)/mzmark_syntax.inc
 symbol.@LTO@: $(COMMON_HEADERS) \
@@ -408,6 +408,6 @@ sema.@LTO@: $(COMMON_HEADERS) \
 type.@LTO@: $(COMMON_HEADERS) \
         $(srcdir)/../src/stypes.h $(srcdir)/mzmark_type.inc
 vector.@LTO@: $(COMMON_HEADERS) \
-         $(srcdir)/../src/stypes.h
+         $(srcdir)/../src/stypes.h $(srcdir)/schchap.h
 validate.@LTO@: $(COMMON_HEADERS) \
          $(srcdir)/../src/stypes.h $(srcdir)/mzmark_validate.inc
